--- a/homepage.css
+++ b/homepage.css
@@ -1,24 +1,80 @@
+.everything {
+    background-color: #F1F1E5;
+    background-attachment: fixed;
+    overflow: hidden;
+}
+
+.imageContainer {
+    position: relative;
+    text-align: center;
+}
+
 .intro
 {
     color: black;
     font-family: 'Brush Script MT';
-    font-size: 50px;
-
+    font-size: 100px;
+    font-weight: bold;
+    text-align: center;
 }
 
-.pelican {
-    width: 100px;
+
+.scroll {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;
+}
+
+.voted {
+    max-width: 15%;
+    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;
+    z-index: 3;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding-bottom: 415px;
 }
 
 .buttons {
-    padding: 15px 25px;
-    font-size: 50px;
-    text-align: center;
+    font-family: 'Brush Script MT';
+    font-weight: bold;
+    font-size: 25px;
     cursor: pointer;
     outline: none;
-    color: #fff;
-    background-color: #04AA6D;
-    border: none;
-    border-radius: 15px;
-    box-shadow: 0 9px #999;
+    color: blue;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding-bottom: 150px;
+    z-index: 4;
 }
+
+button {
+    margin: auto;
+    position: absolute; /* set button to an absolute position */
+    font-family: 'Apple Chancery';
+    font-weight: bold;
+    color: #3d468A;
+    font-size: 32px;
+    border-color: #980B29;
+    background-color: white;
+    border-radius: 100px;
+    position: relative;
+    margin-top: 1 px;
+    z-index: 2;
+}
+
+
+/*    background-color: rgb(250, 151, 146);
+      box-shadow: 5px 5px #999;   */
+
