--- a/propstyle.css
+++ b/propstyle.css
@@ -1,5 +1,147 @@
-.hey
+body {
+    background-color: #F1F1E5;
+  }
+
+
+.vote_button_pro
 {
-    font-family: Helvetica;
-    color: aqua;
+/* Ellipse 18 */
+
+box-sizing: border-box;
+border-radius: 50%;
+
+position: relative;
+width: 179px;
+height: 183px;
+left: 291px;
+top: 232px;
+
+background: linear-gradient(180deg, #FF3737 35.06%, rgba(255, 55, 55, 0) 35.07%), linear-gradient(180deg, #FFFFFF 66.51%, rgba(255, 255, 255, 0) 66.52%), #044389;
+border: 1px solid #000000;
+box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+
 }
+
+.text_pro
+{
+/* Pros */
+
+width: 160px;
+height: 72px;
+left: 347px;
+top: 290px;
+
+font-family: 'Koulen';
+font-style: normal;
+font-weight: 400;
+font-size: 36px;
+line-height: 65px;
+text-align: center;
+
+color: #FF3737;
+}
+
+.vote_button_con
+{
+/* Ellipse 20 */
+
+box-sizing: border-box;
+border-radius: 50%;
+
+position: relative;
+width: 179px;
+height: 183px;
+left: 809px;
+top: 232px;
+
+background: linear-gradient(180deg, #FF3737 35.06%, rgba(255, 55, 55, 0) 35.07%), linear-gradient(180deg, #FFFFFF 66.51%, rgba(255, 255, 255, 0) 66.52%), #044389;
+border: 1px solid #000000;
+box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.text_con
+{
+ /* Cons */
+
+width: 160px;
+height: 72px;
+left: 769px;
+top: 294px;
+
+font-family: 'Koulen';
+font-style: normal;
+font-weight: 400;
+font-size: 36px;
+line-height: 65px;
+text-align: center;
+
+color: #FF3737;
+
+}
+
+.vote_button_info
+{
+/* Ellipse 16 */
+
+box-sizing: border-box;
+border-radius: 50%;
+
+position: absolute;
+width: 179px;
+height: 183px;
+left: 650px;
+top: 200px;
+
+background: linear-gradient(180deg, #FF3737 35.06%, rgba(255, 55, 55, 0) 35.07%), linear-gradient(180deg, #FFFFFF 66.51%, rgba(255, 255, 255, 0) 66.52%), #044389;
+border: 1px solid #000000;
+box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+}
+
+.text_info_points
+{
+/* Points */
+width: 160px;
+height: 162px;
+left: 690px;
+top: 210px;
+
+
+font-family: 'Koulen';
+font-style: normal;
+font-weight: 400;
+font-size: 36px;
+line-height: 65px;
+text-align: center;
+
+color: #FF3737;
+
+}
+
+.text_info_main
+{
+    /* Main */
+
+
+width: 160px;
+height: 57px;
+left: 650px;
+top: 211px;
+
+font-family: 'Koulen';
+font-style: normal;
+font-weight: 400;
+font-size: 36px;
+line-height: 65px;
+text-align: center;
+
+color: #FFFFFF;
+
+
+}
+
+.koulen-regular {
+    font-family: "Koulen", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
