--- a/writeletter.css
+++ b/writeletter.css
@@ -1,6 +1,40 @@
 
+        .script-return{
+            position: absolute;
+            top: 100%;
+            left: 0;
+            padding: 10%;
+            width: 90%;
+            height: 80%;
+            background-color: #f1f1e5;   
+        }
+        .opener {
+            font-family: 'Protest Strike', sans-serif;
+            font-size: x-large;
+            color:#ffffff;
+            -webkit-text-stroke: 1px #e5aa92;
+        }
+
+        .dropdown {
+            float:right;
+        }
+
+        .personalInfo {
+            float:left;
+        }
+        .contents {
+            padding: 10%;
+            width: 90%;
+            height: 80%;
+            background-color: #f1f1e5;
+            position:relative;
+        }
+        .whole-body{
+            background-color: #f9d7c1;
+        }
+
         .dropbtn {
-            background-color: #4CAF50;
+            background-color: #e5aa92;
             color: white;
             padding: 10px 20px;
             border: none;
@@ -11,7 +45,7 @@
         .dropdown-content {
             display: none;
             position: absolute;
-            background-color: #f9f9f9;
+            background-color: #f9d7c1;
             min-width: 160px;
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
             z-index: 1;
