--- a/writeletter.css
+++ b/writeletter.css
@@ -1,9 +1,26 @@
+        .whole-body{
+            background-color: white;
+        }
+        .scriptButton{
+            display: inline-block;
+            font-family: 'Poppins', sans-serif;
+            text-transform: lowercase;
+            color: black;
+            background-color: white;
+            margin-right: 5px;
 
+            padding: 5px 10px;
+            border: none;
+            border-radius: 10px;
+            text-align: center;
+            text-decoration: none;
+            cursor: pointer;
+        }
         .script-return{
             position: absolute;
             top: 100%;
             left: 0;
-            padding: 10%;
+            padding: px;
             width: 90%;
             height: 80%;
             background-color: #f1f1e5;   
@@ -23,13 +40,15 @@
             float:left;
         }
         .contents {
-            padding: 10%;
+            padding-right:50px;
+            padding-left: 50px;
             width: 90%;
             height: 80%;
             background-color: #f1f1e5;
             position:relative;
         }
         .whole-body{
+            overflow:hidden;
             background-color: #f9d7c1;
         }
 
@@ -49,6 +68,8 @@
             min-width: 160px;
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
             z-index: 1;
+            font-family: 'Poppins', sans-serif;
+
         }
 
         /* Style the dropdown links */
@@ -56,6 +77,7 @@
             padding: 12px 16px;
             text-decoration: none;
             display: block;
+            font-family: 'Poppins', sans-serif;
         }
 
         /* Change color on hover */
